// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`determinism harness — the real Driving campaign (04-core.md §14) > 'mid-arc, non-terminal': event stream is golden-filed 1`] = `
[
  {
    "data": {
      "streamId": "system:start:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "driving",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "driving",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "campaignId": "bulgaria-driving",
      "campaignVersion": "1.0.0",
      "kindId": "story-graph",
    },
    "name": "core.game.created",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "bmw_ownership",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "bmw_ownership",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "believe_him",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
]
`;

exports[`determinism harness — the real Driving campaign (04-core.md §14) > 'mid-arc, non-terminal': serialize() output is golden-filed 1`] = `"{"actionLog":[{"actionId":"believe_him","seq":0}],"campaignId":"bulgaria-driving","campaignVersion":"1.0.0","formatVersion":1,"gameId":"fixed-game-id","kindId":"story-graph","kindState":{"currentNodeId":"bmw_ownership","turn":1,"unlockedAchievements":[],"variables":{"trust_mechanic":true},"visitedCounts":{"bmw_ownership":1,"driving":1}},"seed":"driving-seed-1","status":"active"}"`;

exports[`determinism harness — the real Driving campaign (04-core.md §14) > 'skeptical arc to ending_skeptical': event stream is golden-filed 1`] = `
[
  {
    "data": {
      "streamId": "system:start:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "driving",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "driving",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "campaignId": "bulgaria-driving",
      "campaignVersion": "1.0.0",
      "kindId": "story-graph",
    },
    "name": "core.game.created",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "bmw_ownership",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "bmw_ownership",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "ask_another_opinion",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:1",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "ending_skeptical",
      "nodeKind": "ending",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 1,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "ending_skeptical",
      "nodeKind": "ending",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "ask_what_he_fixed",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 1,
    "severity": "info",
  },
  {
    "name": "core.game.ended",
    "ordinal": 4,
    "scope": "game",
    "seq": 1,
    "severity": "info",
  },
]
`;

exports[`determinism harness — the real Driving campaign (04-core.md §14) > 'skeptical arc to ending_skeptical': serialize() output is golden-filed 1`] = `"{"actionLog":[{"actionId":"ask_another_opinion","seq":0},{"actionId":"ask_what_he_fixed","seq":1}],"campaignId":"bulgaria-driving","campaignVersion":"1.0.0","formatVersion":1,"gameId":"fixed-game-id","kindId":"story-graph","kindState":{"currentNodeId":"ending_skeptical","endingId":"asked_for_a_second_opinion","turn":2,"unlockedAchievements":[],"variables":{"trust_mechanic":false},"visitedCounts":{"bmw_ownership":1,"driving":1,"ending_skeptical":1}},"seed":"driving-seed-1","status":"ended"}"`;

exports[`determinism harness — the real Driving campaign (04-core.md §14) > 'trusting arc to ending_trusting': event stream is golden-filed 1`] = `
[
  {
    "data": {
      "streamId": "system:start:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "driving",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "driving",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "campaignId": "bulgaria-driving",
      "campaignVersion": "1.0.0",
      "kindId": "story-graph",
    },
    "name": "core.game.created",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:0",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "bmw_ownership",
      "nodeKind": "choice",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 0,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "bmw_ownership",
      "nodeKind": "choice",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 0,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "believe_him",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 0,
    "severity": "info",
  },
  {
    "data": {
      "streamId": "action:1",
    },
    "name": "core.rng.stream.derived",
    "ordinal": 0,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "nodeId": "ending_trusting",
      "nodeKind": "ending",
      "visitCount": 1,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.node.entered",
    "ordinal": 1,
    "scope": "game",
    "seq": 1,
    "severity": "debug",
  },
  {
    "data": {
      "nodeId": "ending_trusting",
      "nodeKind": "ending",
      "step": 0,
    },
    "kindId": "story-graph",
    "name": "kind.story-graph.settle.step",
    "ordinal": 2,
    "scope": "game",
    "seq": 1,
    "severity": "trace",
  },
  {
    "data": {
      "actionId": "pay_immediately",
    },
    "name": "core.action.accepted",
    "ordinal": 3,
    "scope": "game",
    "seq": 1,
    "severity": "info",
  },
  {
    "name": "core.game.ended",
    "ordinal": 4,
    "scope": "game",
    "seq": 1,
    "severity": "info",
  },
]
`;

exports[`determinism harness — the real Driving campaign (04-core.md §14) > 'trusting arc to ending_trusting': serialize() output is golden-filed 1`] = `"{"actionLog":[{"actionId":"believe_him","seq":0},{"actionId":"pay_immediately","seq":1}],"campaignId":"bulgaria-driving","campaignVersion":"1.0.0","formatVersion":1,"gameId":"fixed-game-id","kindId":"story-graph","kindState":{"currentNodeId":"ending_trusting","endingId":"trusting_the_mechanic","turn":2,"unlockedAchievements":[],"variables":{"trust_mechanic":true},"visitedCounts":{"bmw_ownership":1,"driving":1,"ending_trusting":1}},"seed":"driving-seed-1","status":"ended"}"`;
